--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <body class="debug">
     <header>
         <div class="container">
-        header
+        <img src="./img/logo.png" alt="" id="logo">
+        <ul id="nav-list">
+            <li><a href="#">features</a></li>
+            <li><a href="#">editorials</a></li>
+            <li><a href="#">enviroment</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">contact</a></li>
+        </ul>
         </div>
     </header>
     <main>
