--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
         </div>
     </header>
     <main>
-        <section id="jumbo">
-            <div class="container"> 
-
+        <section id="jumbo" class="container">
+           
+                <div class="bkg-wrapper">
+                    <div class="testo-jumbo">
+                <h1>Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam harum at velit.
+                Recusandae quos doloremque iusto optio facilis voluptates explicabo quae maiores velit labore.</p>
+               </div>
+                </div> 
             </div>
         </section>
         <section id="main-content">
-            <div class="container">
+           
                 <div class="row">
                 <div class="col-12">
                     <div class="module">
