--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <div class="container row">
                     <div class="col-3">
                         <div class="module-img-sm">
-                            <img class="overlay" src="./img/img-4.jpg" alt="">
+                            <img class="overlay border-radius" src="./img/img-4.jpg" alt="">
 
-                            <img class="vis" src="./img/img-1.jpg" alt="">
+                            <img class="border-radius" src="./img/img-1.jpg" alt="">
                         </div>
                         <div class="module">
                             <h4>Lorem</h4>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="col-6">
                         <div class="module-img-bg">
-                           <img src="./img/banner-2.jpg" alt="">
+                           <img class="border-radius"src="./img/banner-2.jpg" alt="">
                         </div>
                         <div class="module">
                             <h4>Lorem</h4>
@@ -84,9 +84,9 @@
                     </div>
                     <div class="col-3">
                         <div class="module-img-sm">
-                             <img class="overlay" src="./img/img-5.jpg" alt="">
+                             <img class="overlay border-radius" src="./img/img-5.jpg" alt="">
                            
-                             <img class="vis"src="./img/img-6.jpg" alt="">
+                             <img class="border-radius "src="./img/img-6.jpg" alt="">
                          
                         </div>
                         <div class="module">
@@ -106,7 +106,7 @@
     <footer>
 
         <div class="container">
-            footer
+            <p>Made with <span>&hearts;</span></p>
         </div>
     </footer>
 </body>
